add bounding and label through API
